--- a/SamplePythonFlaskApp/Jenkinsfile
+++ b/SamplePythonFlaskApp/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo "Building Docker image..."
-                sh "docker build -t mypythonflaskapp ."
+                sh "docker build -t mypythonflaskapp SamplePythonFlaskApp"
             }
         }
         stage('Run') {
